syntax = "proto3";

package hue;

service Hue {
    rpc Discover(DiscoverParams) returns (stream Bridge) {}
    rpc GetBridgeState(Bridge) returns (BridgeState) {}
    rpc ListLights(ListLightParams) returns (stream Light) {}
    rpc GetLight(GetLightParams) returns (Light) {}
    rpc SetLight(stream Light) returns (stream Light) {}
 }

 message Bridge {

 }

 message DiscoverParams {}

 message BridgeState {

 }

 message Light {

 }

 message ListLightParams {

 }

 message GetLightParams {

 }